--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@duckdb/duckdb-wasm": "^1.28.0",
     "@emotion/css": "^11.1.3",
     "@grafana/data": "10.0.3",
     "@grafana/runtime": "10.0.3",
